added ckeditor with keeping article functionality

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,25 +1,10 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Articles</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @articles.each do |article| %>
-      <tr>
-        <td><%= link_to 'Show', article %></td>
-        <td><%= link_to 'Edit', edit_article_path(article) %></td>
-        <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Article', new_article_path %>
+<%= link_to "New Article", new_article_path %>
+<% @articles.each do |article| %>
+  <h3><%= article.title.html_safe %></h3>
+  <p><%= article.body.html_safe %></p>
+  <%= link_to "Edit Article", edit_article_path(article) %>
+  <%= link_to "Destroy", article, method: :delete, data: { confirm: 'Are you sure?' } %>
+  <% if article != @articles.last %>
+  <hr />
+  <% end %>
+<% end %>
