--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,10 +1,10 @@
 <%= link_to "New Article", new_article_path %>
 <% @articles.each do |article| %>
-  <h3><%= article.title.html_safe %></h3>
-  <p><%= article.body.html_safe %></p>
+  <h3><%= @article.title.html_safe %></h3>
+  <p><%= @article.body.html_safe %></p>
   <%= link_to "Edit Article", edit_article_path(article) %>
   <%= link_to "Destroy", article, method: :delete, data: { confirm: 'Are you sure?' } %>
-  <% if article != @articles.last %>
+  <% if @article != @articles.last %>
   <hr />
   <% end %>
 <% end %>
