Fixed some styling issues on admin pages

--- a/app/views/layouts/_nav-bar.html.erb
+++ b/app/views/layouts/_nav-bar.html.erb
@@ -1,6 +1,6 @@
 <div class='nb-container'>
     <div class='nb-title'>
-        <p>Equipo Wiki</p>
+        <a href="/">Equipo Wiki</a>
     </div>
     <div class='nb-sign-in'>
         <% if admin_signed_in? %>
