--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -13,10 +13,19 @@
     padding: 20px;
 }
 
-.nb-title p{
+a{
+    color: white;
+    text-decoration: none;
+    width: 100%;
+    height: 100%;
+}
+
+.nb-title a{
+    height: 100%;
     font-size: 24px;
 }
 
-.nb-sign-in{
+.nb-sign-in a{
+    height: 100%;
     margin-right: 30px;
 }
