created migration / scaffold for article_history, attempted printing them in the edit form page

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -22,3 +22,8 @@
     <%= f.submit %>
   </div>
 <% end %>
+<%= @article_histories.each do |article_history| %>
+  <% if article_history != @article_histories.last %>
+    <hr />
+  <% end %>
+<% end %>
