fixed viewing article histories in the edit page. todo: adding to article history when article updated

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,2 +1,7 @@
 <%= "Editing #{@article.title}" %>
 <%= render "form" %>
+<%= @article_histories.each do |article_history| %>
+  <% if article_history != @article_histories.last %>
+    <hr />
+  <% end %>
+<% end %>
