--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,7 +24,7 @@
 
     <div class="actions">
       <%= f.submit "Sign up" %>
-    </div>
+    </div>''
   <% end %>
 
   <%= render "devise/shared/links" %>
