--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,11 @@
 <p id="notice"><%= notice %></p>
 
+<h1>Title: <%= @article.title %></h1>
+
+<div>
+    <%= @article.body.html_safe%>
+</div>
+
 
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
