--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,8 +16,16 @@
 
  .title{
      text-align: center;
+     color: white;
      font-size: 5em;
      margin-top: 1em;
+ }
+
+ .title_navigation_articles{
+     text-align: center;
+     color: white;
+     font-size: 2.5em;
+     margin-top: 2em;
  }
 
  body{
@@ -29,6 +37,8 @@
     color: white;
     margin: 0;
     padding: 5px;
+    font-size: 18px;
+    text-align: center;
  }
 
  .form-container{
