--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -5,8 +5,8 @@
 
 .nb-container{
     width: 100%;
-    background: #6e028e;
-    color: white;
+    background: #8063d5;
+    /*color: white;*/
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
@@ -14,7 +14,7 @@
 }
 
 a{
-    color: white;
+    /*color: white;*/
     text-decoration: none;
     width: 100%;
     height: 100%;
@@ -22,10 +22,13 @@ a{
 
 .nb-title a{
     height: 100%;
+    color: white;
     font-size: 24px;
 }
 
 .nb-sign-in a{
     height: 100%;
+    color: white;
+    font-size: 16px;
     margin-right: 30px;
 }
