--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,4 @@
 <div class="title"> Equipo-Wiki</div>
+<div class="title_navigation_articles">
+    <a href="/articles">Link to articles page</a>
+</div>
