Fixed issues with RSPEC, causing weird failures, however, we are now below 50% code coverage fyi

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,7 +3,7 @@
 <h1>Title: <%= @article.title %></h1>
 
 <div>
-    <%= @article.body.html_safe%>
+    <%= @article.body.to_s.html_safe%>
 </div>
 
 
