--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,6 +6,11 @@
     <%= @article.body.to_s.html_safe%>
 </div>
 
+<div>
+    <% @article.images.each do |image| %>
+        <%= image_tag url_for(image) %>
+    <% end %>
+</div>
 
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
