--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,7 +5,9 @@
 <div>
     <%= @article.body.to_s.html_safe%>
 </div>
-
+<div>
+    <%= @article.body.to_s.html_safe%>
+</div>
 <div>
     <% @article.images.each do |image| %>
         <%= image_tag url_for(image) %>
