--- a/app/views/layouts/_nav-bar.html.erb
+++ b/app/views/layouts/_nav-bar.html.erb
@@ -2,9 +2,9 @@
     <div class='nb-title'>
         <a href="/">Equipo Wiki</a>
     </div>
-  <div class='nb-title'>
-    <%= link_to 'Articles', articles_path %>
-  </div>
+    <div class='nb-article'>
+        <%= link_to 'Articles', articles_path %>
+    </div>
     <div class='nb-sign-in'>
         <% if admin_signed_in? %>
             <%= link_to 'Sign Out', destroy_admin_session_path, method: :delete %>
