--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,10 +1,16 @@
-<%= link_to "New Article", new_article_path %>
+<div class='new_article_link'>
+  <%= link_to "New Article", new_article_path %>
+</div>
 <% @articles.each do |article| %>
   <h3><%= article.title.html_safe %></h3>
   <p><%= article.body.html_safe %></p>
+  
   <%= link_to "View Article", article_path(article)%>
+  |
   <%= link_to "Edit Article", edit_article_path(article) %>
+  |
   <%= link_to "Destroy", article, method: :delete, data: { confirm: 'Are you sure?' } %>
+  
   <% if @article != @articles.last %>
   <hr />
   <% end %>
