--- a/app/views/layouts/_nav-bar.html.erb
+++ b/app/views/layouts/_nav-bar.html.erb
@@ -9,6 +9,7 @@
         <% if admin_signed_in? %>
             <%= link_to 'Sign Out', destroy_admin_session_path, method: :delete %>
             <%= link_to 'Edit Admin Profile', edit_admin_registration_path %>
+            <%= link_to 'Control Panel', blocked_ips_path%>
         <% else %>
             <%= link_to 'Sign In', new_admin_session_path %>
             <%= link_to 'Sign Up', new_admin_registration_path %>
