--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,12 +5,12 @@
 <div>
     <%= @article.body.to_s.html_safe%>
 </div>
-<div>
-    <%= @article.body.to_s.html_safe%>
-</div>
+
 <div>
     <% @article.images.each do |image| %>
-        <%= image_tag url_for(image) %>
+        <%= link_to(image_path(image)) do %>
+            <%= image_tag url_for(image) %>
+        <% end %>
     <% end %>
 </div>
 
