--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -25,6 +25,10 @@
     <%= f.file_field :images, multiple: true, direct_upload: true %>
   </div>
   <div>
+    <%= f.label :comment, "Add comments to picture"%>
+  </div>
+  <div>
+    <%= f.text_field :comment%>
   </div>
   <% if admin_signed_in?%>
     <div>
