--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -7,5 +7,8 @@
         </br>
         Dimensions: Width: <%= @imageBlob.metadata["width"] %> Height: <%= @imageBlob.metadata["height"] %>
         </p>
+        <p>
+        Comments: <%= @article.comment%>
+        </p>
 </div>
 <%= link_to 'Articles', articles_path %>
